--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>个人简历</title>
 	<link rel="stylesheet" href="css/css.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<div id="pased">
@@ -52,11 +53,19 @@
 					      <span></span>
 					</div>
 					<div id="cent">
-						<a href="#">鑫昌发拉链有限公司</a>
+						<a href="https://1340929230.github.io/xinchangfa/index">鑫昌发拉链有限公司</a>
 						<p>主要是使用HTML标记、div+css+javascript Dom操作等前端技术进行网站的开发与制造。</p>
 					</div>
 					<div id="cfnt">
-						<a href="#">凤凰体育</a>
+						<a href="https://1340929230.github.io/fenghuang/index">凤凰体育</a>
+						<p>充分地利用了div盒子模型做出了规格化的单页模型，使用javascript展示一些小型特效，继而完成了网站的制作。</p>
+					</div>
+					<div id="cgnt">
+						<a href="https://1340929230.github.io/tushuguan/index">中国国家图书馆</a>
+						<p>充分地利用了div盒子模型做出了规格化的单页模型，使用javascript展示一些小型特效，继而完成了网站的制作。</p>
+					</div>
+					<div id="chnt">
+						<a href="https://1340929230.github.io/aotuo/index">奥拓泵业</a>
 						<p>充分地利用了div盒子模型做出了规格化的单页模型，使用javascript展示一些小型特效，继而完成了网站的制作。</p>
 					</div>
 				</section>
