--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>个人简历</title>
 	<link rel="stylesheet" href="css/css.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
 	<div id="pased">
@@ -62,11 +62,11 @@
 					</div>
 					<div id="cgnt">
 						<a href="https://1340929230.github.io/tushuguan/index">中国国家图书馆</a>
-						<p>充分地利用了div盒子模型做出了规格化的单页模型，使用javascript展示一些小型特效，继而完成了网站的制作。</p>
+						<p>利用HTML标记、div+css等前端技术进行网站的制造。</p>
 					</div>
 					<div id="chnt">
 						<a href="https://1340929230.github.io/aotuo/index">奥拓泵业</a>
-						<p>充分地利用了div盒子模型做出了规格化的单页模型，使用javascript展示一些小型特效，继而完成了网站的制作。</p>
+						<p>主要是使用HTML标记、div+css+javascript Dom操作等前端技术完成了网站的开发与制造。</p>
 					</div>
 				</section>
 				<section id="four">
@@ -75,7 +75,7 @@
 						<li><span class="lei">QQ:</span>1340929230</li>
 						<li><span class="lei">Tel:</span>15076662568</li>
 						<li><span class="lei">微信：</span>dong971121</li>
-						<li><span class="lei">邮箱：</span>qinbaozi_1121@163.com</li>
+						<li><span class="lei">邮箱：</span>1340929230@qq.com</li>
 					</ul>
 				</section>
 			</div>
